# monitor-panel

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/pages/: mod.rs  monitor.rs  network.rs
