[package]
name = "sysmon-panel"
version = "0.1.0"
edition = "2024"

[dependencies]
ctrlc = "3.5.2"
display-interface-i2c = "0.5.0"
embedded-graphics = "0.8.2"
embedded-hal = "1.0.0"
getifaddrs = "0.6.2"
gpiod = "0.3.0"
linux-embedded-hal = { version = "0.4.1", features = ["gpio_cdev"] }
ssd1306 = "0.10.0"
